W-13718989: New module mule-module-boot-api. (#12825)